[package]
name = "embassy-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
vl53l1x-hal = {path = "../../vl53l1x-hal"}

embassy-executor = { version = "0.7.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.4.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m-rt = "0.7.0"

panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'
panic = "abort"

[profile.dev]
debug = 2
lto = true
opt-level = "z"
panic = "abort"